--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "1.0.0",
   "description": "Steam Web Application",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "vite": "^4.5.14"
   },
   "browserslist": {
     "production": [
@@ -30,5 +32,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "vite": {
+    "plugins": [
+      "@vitejs/plugin-react"
+    ],
+    "server": {
+      "port": 3000,
+      "open": true
+    }
+  },
+  "html": {
+    "template": "public/index.html"
   }
 }
